--- a/notebooks/test.ipynb
+++ b/notebooks/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,12 +27,12 @@
     "from data_utils import MinyoDataset, custom_collate_fn, get_wer\n",
     "\n",
     "\n",
-    "from my_model_daewoung import Mymodel"
+    "from my_model import Mymodel"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -48,22 +48,44 @@
     "audio_path = '/home/daewoong/userdata/danbi/final_tts_audio'\n",
     "lyric_path = '/home/daewoong/userdata/danbi/final_lyrics_data/'\n",
     "each_lyric = '/home/daewoong/userdata/danbi/each_song_lyrics.txt'\n",
+    "result_path = '/home/daewoong/userdata/danbi/encoder_result'\n",
     "filtered_id_list = pickle.load(open('/home/daewoong/userdata/danbi/thirty_second_filtered_id.pkl', 'rb'))\n",
     "\n",
     "print('download token now')\n",
     "\n",
     "processor = WhisperProcessor.from_pretrained(\"openai/whisper-large-v2\", language=\"ko\", task=\"transcribe\", predict_timestamps=True)\n",
-    "dataset = MinyoDataset(audio_path, lyric_path, processor, filtered_id_list, each_lyric, max_len = 1024)\n",
-    "\n",
+    "dataset = MinyoDataset(result_path, lyric_path, processor, filtered_id_list, each_lyric, max_len = 1024, random_ratio=0.0)\n",
     "print('token download complete')\n",
     "\n",
-    "train_size = int(len(dataset) * 0.8)\n",
-    "valid_size = len(dataset) - train_size\n",
+    "# train_size = int(len(dataset) * 0.8)\n",
+    "# valid_size = len(dataset) - train_size\n",
     "\n",
-    "train_data, valid_data = random_split(dataset, [train_size, valid_size])\n",
+    "# train_data, valid_data = random_split(dataset, [train_size, valid_size])\n",
     "\n",
-    "train_dataloader = DataLoader(train_data, batch_size=4, shuffle=True, collate_fn=custom_collate_fn, num_workers=8, pin_memory=True)\n",
-    "valid_dataloader = DataLoader(valid_data, batch_size=4, shuffle=False, collate_fn=custom_collate_fn, num_workers=8, pin_memory=True)\n"
+    "# train_dataloader = DataLoader(train_data, batch_size=4, shuffle=True, collate_fn=custom_collate_fn, num_workers=8, pin_memory=True)\n",
+    "# valid_dataloader = DataLoader(valid_data, batch_size=4, shuffle=False, collate_fn=custom_collate_fn, num_workers=8, pin_memory=True)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('우리는 왜 이리 밤낮없이 자고나먼 땅만 파고허여도',\n",
+       " '우리 어머니는 나를 날적에\\n고비 나물을 잡쉈나\\n우리 어머니는 나를 길러서\\n무엇땜이 날 갖다 이런 데다 성궈놓고\\n넘들은 이짓 않고 잘살고 잘먹고\\n이지경으로 사나\\n우리는 왜 이리 밤낮없이\\n아이구 내신세야 내 팔자야\\n이짓도 않고 팔자좋게 잘지내두만\\n내가 뭣땜이 이런 데로와서\\n고대광실 높은 집에 앉아서\\n날 고생을 이리나 시겨 주시나야\\n자고나먼 땅만 파고허여도\\n이런 것을 허니라고 이고생을 하고 사나야\\n내 팔자야 내 신세야',\n",
+       " 'lyric6241-3')"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dataset.text_process[3005]"
    ]
   },
   {
@@ -2058,6 +2080,15 @@
    "outputs": [],
    "source": [
     "criterion(pred.view(-1, pred.size(-1)), true_input_text.view(-1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas"
    ]
   }
  ],
